--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,6 +1,6 @@
 FROM php:7.3.6-fpm-alpine3.9
 
-RUN apk add --no-cache shadow openssl bash mysql-client nodejs npm git dos2unix
+RUN apk add --no-cache shadow openssl bash mysql-client nodejs npm
 RUN docker-php-ext-install pdo pdo_mysql
 
 
