--- a/Api/Dockerfile
+++ b/Api/Dockerfile
@@ -19,7 +19,7 @@ RUN wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSI
     && rm dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz
 
 
-WORKDIR /var/www/backend
+WORKDIR /var/www
 RUN rm -rf /var/www/html 
 
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
