--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
     app:
         build: backend
         container_name: micro-videos-app
-        #entrypoint: dockerize -wait tcp://db:3306 -timeout 40s ./.docker/entrypoint.sh
+        entrypoint: dockerize -wait tcp://db:3306 -timeout 40s ./.docker/entrypoint.sh
         environment:
             - _DB_HOST=db
             - _DB_DATABASE=code_micro_videos
@@ -13,6 +13,8 @@ services:
             - _DB_PASSWORD=root
             # TEST
             - _TEST_DB_DATABASE=code_micro_videos_teste
+        ports:
+          - "3000:3000"
         volumes:
             - .:/var/www
         networks:
