--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ version: '3'
 services:
 
     app:
-        build: backend
+        build: .
         container_name: micro-videos-app
         entrypoint: dockerize -wait tcp://db:3306 -timeout 40s ./.docker/entrypoint.sh
         environment:
@@ -15,6 +15,9 @@ services:
             - _TEST_DB_DATABASE=code_micro_videos_teste
         ports:
           - "3000:3000"
+          - "35729:35729"
+        environment: 
+            - CHOKIDAR_USEPOLLING=true
         volumes:
             - .:/var/www
         networks:
