--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,13 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
     "@types/jest": "^26.0.20",
+    "@types/mui-datatables": "^3.7.1",
     "@types/node": "^12.20.4",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "@types/react-router-dom": "^5.1.7",
     "@types/route-parser": "^0.1.3",
+    "mui-datatables": "^3.7.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
