Aplicando Cors No Laravel

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -50,3 +50,5 @@ GOOGLE_CLOUD_PROJECT_ID=infra-signifies-249921
 GOOGLE_CLOUD_KEY_FILE=service-account-storage.json
 GOOGLE_CLOUD_STORAGE_BUCKET=nome-do-projeto
 GOOGLE_CLOUD_STORAGE_API_URI=https://storage.cloud.google.com/nome-do-projeto
+
+CORS_ORIGINS=
