--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,7 +27,8 @@
     "route-parser": "0.0.5",
     "typescript": "^4.2.2",
     "web-vitals": "^1.1.0",
-    "yup": "^0.28.1"
+    "yup": "^0.28.1",
+    "notistack": "^0.9.7"
   },
   "scripts": {
     "start": "react-scripts start",
