--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
     "@types/jest": "^26.0.20",
+    "@types/lodash": "^4.14.168",
     "@types/mui-datatables": "^3.7.1",
     "@types/node": "^12.20.4",
     "@types/react": "^17.0.2",
@@ -18,7 +19,9 @@
     "@types/yup": "^0.26.30",
     "axios": "^0.21.1",
     "date-fns": "^2.19.0",
+    "lodash": "^4.17.21",
     "mui-datatables": "^3.7.6",
+    "notistack": "^0.9.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^4.8.2",
@@ -27,8 +30,7 @@
     "route-parser": "0.0.5",
     "typescript": "^4.2.2",
     "web-vitals": "^1.1.0",
-    "yup": "^0.28.1",
-    "notistack": "^0.9.7"
+    "yup": "^0.28.1"
   },
   "scripts": {
     "start": "react-scripts start",
