--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "route-parser": "0.0.5",
     "typescript": "^4.2.2",
     "web-vitals": "^1.1.0",
+    "use-debounce": "^3.3.0",
     "yup": "^0.28.1"
   },
   "scripts": {
