--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "4.0.0-alpha.46",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
@@ -34,8 +35,8 @@
     "reduxsauce": "^1.1.2",
     "route-parser": "0.0.5",
     "typescript": "^4.2.2",
-    "web-vitals": "^1.1.0",
     "use-debounce": "^3.3.0",
+    "web-vitals": "^1.1.0",
     "yup": "^0.28.1"
   },
   "scripts": {
