--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@types/yup": "^0.26.30",
     "axios": "^0.21.1",
     "date-fns": "^2.19.0",
+    "immutability-helper": "^3.1.1",
     "lodash": "^4.17.21",
     "mui-datatables": "^2.14.0",
     "notistack": "^0.9.7",
