--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,26 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.3",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "4.0.0-alpha.46",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
-    "@testing-library/user-event": "^12.8.1",
-    "@types/jest": "^26.0.20",
-    "@types/lodash": "^4.14.168",
+    "@material-ui/core": "4.9.0",
+    "@material-ui/icons": "4.5.1",
+    "@material-ui/lab": "^4.0.0-alpha.40",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.4.0",
+    "@testing-library/user-event": "^7.2.1",
+    "@types/jest": "^24.9.1",
+    "@types/lodash": "^4.14.149",
     "@types/mui-datatables": "^2.13.4",
-    "@types/node": "^12.20.4",
-    "@types/react": "^17.0.2",
-    "@types/react-dom": "^17.0.1",
+    "@types/node": "^12.12.26",
+    "@types/react": "^16.9.19",
+    "@types/react-dom": "^16.9.5",
     "@types/react-redux": "^7.1.9",
-    "@types/react-router-dom": "^5.1.7",
+    "@types/react-router-dom": "^5.1.3",
     "@types/route-parser": "^0.1.3",
     "@types/yup": "^0.26.30",
-    "axios": "^0.21.1",
-    "date-fns": "^2.19.0",
+    "axios": "^0.19.2",
+    "date-fns": "^2.9.0",
     "immutability-helper": "^3.1.1",
-    "lodash": "^4.17.21",
+    "lodash": "^4.17.15",
     "mui-datatables": "^2.14.0",
     "notistack": "^0.9.7",
     "object-to-formdata": "^3.0.6",
